[package]
name = "rc8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf"] }
nanorand = { version = "0.7.0" }
thiserror = { version = "1.0.32" }
anyhow = { version = "1.0.62" }
